mise a jour des api